--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,165 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anthropic==0.30.0
+anthropic-bedrock==0.8.0
+anyio==3.6.2
+appnope==0.1.4
+asttokens==2.2.1
+attrs==23.2.0
+autopep8==2.0.1
+backcall==0.2.0
+backoff==2.2.1
+beautifulsoup4==4.12.3
 blinker==1.8.2
+boto3==1.34.135
+botocore==1.34.135
+cachetools==5.4.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
 click==8.1.7
+comm==0.1.2
+contourpy==1.0.7
+cycler==0.11.0
+debugpy==1.6.6
+decorator==5.1.1
+distlib==0.3.8
+distro==1.9.0
+dnspython==2.3.0
+email-validator==1.3.1
+executing==1.2.0
+fastapi==0.91.0
+fastapi-cli==0.0.4
+filelock==3.15.4
 Flask==3.0.3
+fonttools==4.38.0
+frozenlist==1.4.1
+fsspec==2024.6.1
+google-api-core==2.19.1
+google-auth==2.32.0
+googleapis-common-protos==1.63.2
+grpc-gateway-protoc-gen-openapiv2==0.1.0
+grpcio==1.65.1
+h11==0.14.0
+httpcore==0.16.3
+httptools==0.6.1
+httpx==0.23.3
+huggingface-hub==0.23.4
+idna==3.7
 importlib_metadata==8.0.0
+ipykernel==6.21.1
+ipython==8.10.0
 itsdangerous==2.2.0
+jedi==0.18.2
 Jinja2==3.1.4
+jiter==0.5.0
+jmespath==1.0.1
+joblib==1.2.0
+jsonpickle==3.2.2
+jupyter_client==8.0.2
+jupyter_core==5.2.0
+kiwisolver==1.4.4
+langfuse==2.36.2
+lz4==4.3.3
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.6.3
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.0.5
+mysql-connector-python==9.0.0
+nest-asyncio==1.5.6
+networkx==3.3
+nltk==3.8.1
+numpy==1.26.4
+openai==1.35.8
+orjson==3.10.5
+outcome==1.3.0.post0
+packaging==23.2
+pandas==1.5.3
+parso==0.8.3
+perplexity-client==0.1.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pillow==10.3.0
+pinecone==4.0.0
+pinecone-client==3.1.0
+pinecone-notebooks==0.1.1
+platformdirs==4.2.2
+prompt-toolkit==3.0.36
+proto-plus==1.24.0
+protobuf==3.20.3
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==17.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycodestyle==2.10.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.14.0
+pymongo==4.8.0
+PyMySQL==1.1.1
+pyparsing==3.0.9
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==0.21.1
+python-multipart==0.0.5
+pytz==2022.7.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+regex==2024.5.15
+requests==2.32.3
+requests-file==2.1.0
+rfc3986==1.5.0
+rich==13.7.1
+rsa==4.9
+s3transfer==0.10.2
+safetensors==0.4.3
+scikit-learn==1.5.1
+scipy==1.14.0
+selenium==4.22.0
+sentence-transformers==2.2.2
+sentencepiece==0.2.0
+setuptools==71.0.1
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+SQLAlchemy==2.0.31
+stack-data==0.6.2
+starlette==0.24.0
+sympy==1.12.1
+threadpoolctl==3.1.0
+tldextract==5.1.2
+tokenizers==0.19.1
+tomli==2.0.1
+torch==2.3.1
+torchvision==0.18.1
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+transformers==4.42.4
+trio==0.25.1
+trio-websocket==0.11.1
+typer==0.12.3
+typing_extensions==4.12.2
+ujson==5.10.0
+urllib3==1.26.19
+uuid==1.30
+uvicorn==0.30.1
+uvloop==0.19.0
+virtualenv==20.26.3
+watchfiles==0.22.0
+wcwidth==0.2.13
+webdriver-manager==4.0.1
+websocket-client==1.8.0
+websockets==12.0
 Werkzeug==3.0.3
+wrapt==1.16.0
+wsproto==1.2.0
+yarl==1.9.4
 zipp==3.19.2
